fix: Improve spacing around headings.

--- a/themes/kelpie/sass/blocks/_lists.scss
+++ b/themes/kelpie/sass/blocks/_lists.scss
@@ -16,3 +16,13 @@
 		margin-left: get($spacing, "xs");
 	}
 }
+
+// When a list comes directly after a heading, tighten up the spacing.
+.kelpie-page-content {
+	h1, h2, h3, h4, h5, h6 {
+		& + ol,
+		& + ul {
+			margin-top: -#{get($spacing, 'xs')};
+		}
+	}
+}
